--- a/templates/index.html
+++ b/templates/index.html
@@ -9,45 +9,40 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <title>My WebApp V-0.1</title>
+        <title>My Registration V-0.2</title>
     </head>
     <body>
-    
             <!-- <textarea id="messages" name="messages" rows="10" cols="50">Messages</textarea><br/>
             <input type="button" value="Get v1" onclick="onGet('v1')"/><br/>
              -->
-        
-
         <div class="BackgroundImage" id="BackgroundImage">
         </div>
         <div class="form">
             <form method="POST" action="">
-
-
                 <div class="title">Welcome</div>
                 <div class="subtitle">Let's create your account!</div>
                 <div class="input-container ic1">
-                    <input type="text" id="inputName" class="input" type="text" placeholder=" " />
+                    <input type="text" id="inputName" class="input" maxlength="28" type="text" placeholder=" " />
                     <div class="cut"></div>
                     <label for="firstname" class="placeholder">First name</label>
                 </div>
                 <div class="input-container ic2">
-                    <input type="text" id="inputLanme" class="input"  placeholder=" " />
+                    <input type="text" id="inputLanme" class="input" maxlength="38" placeholder=" " />
                     <div class="cut"></div>
                     <label for="lastname" class="placeholder">Last name</label>
                 </div>
                 <div class="input-container ic2">
-                    <input type="text" id="inputEmail" class="input" placeholder=" " />
+                    <input type="text" id="inputEmail" class="input" maxlength="28" placeholder=" " />
                     <div class="cut cut-short"></div>
                     <label for="email" class="placeholder">Email</>
                 </div>
                 <div class="input-container ic2">
-                    <input type="text" id="inputPassword" class="input" placeholder=" " />
+                    <input type="text" id="inputPassword" class="input" maxlength="12" placeholder=" " />
                     <div class="cut"></div>
                     <label for="password" class="placeholder">Password</>
                 </div>
                 
-                <button type="button" class="submit" onclick="postData()">Prijavi se</button>
+                <button type="button" class="submit" onclick="validate()">Register</button>
             </form>
         </div>
         
