--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -69,6 +69,17 @@ body {
   padding: 4px 20px 0;
   width: 100%;
 }
+/* support Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* support Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 
 .cut {
   background-color: #15172b;
