dodat id u formi

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
              -->
         <div class="BackgroundImage" id="BackgroundImage">
         </div>
-        <div class="form">
+        <div class="form" id="myForm">
             <form method="POST" action="">
                 <div class="title">Welcome</div>
                 <div class="subtitle">Let's create your account!</div>
@@ -51,7 +51,7 @@
                     <div class="cut" style="width: 130px;"></div>
                     <label for="password" class="placeholder">Repeat Password</>
                 </div>
-                <button type="button" class="submit" onclick="validate()">Register</button>
+                <button type="button" class="submit" id="btn" onclick="validate()">Register</button>
 
                 <div class="input-container ic3" id="outputMessage">
                     <h6 class="placeholderoutput"></h4>
