--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,128 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/baseStyle.css">
+
         <script src="scripts/script.js"></script>
+        <!-- <script src="scripts/nav.js"></script> -->
+
+        <!-- <script id="replace_with_navbar" src="scripts/nav.js"></script> -->
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <title>My Registration V-0.2</title>
+       
+       
     </head>
+    <!-- <div id="includedContent" style="height: 100%; height: 50%;"></div> -->
+
     <body>
+        <div class="area"></div>
+        <nav id="includedContent" class="main-menu">
+            <ul>
+                <li>
+                    <a href="#">
+                        <i class="fa bi bi-house fa-2x"></i>
+                        <span class="nav-text">
+                            Dashboard
+                        </span>
+                    </a>
+                    
+                </li>
+                <li class="has-subnav">
+                    <a href="#">
+                        <i class="fa bi bi-laptop fa-2x"></i>
+                        <span class="nav-text">
+                            Stars Components
+                        </span>
+                    </a>
+                    
+                </li>
+                <li class="has-subnav">
+                    <a href="#">
+                        <i class="fa bi bi-list-columns-reverse fa-2x"></i>
+                        <span class="nav-text">
+                            Forms
+                        </span>
+                    </a>
+                    
+                </li>
+                <li class="has-subnav">
+                    <a href="#">
+                        <i class="fa bi bi-folder2-open fa-2x"></i>
+                        <span class="nav-text">
+                            Pages
+                        </span>
+                    </a>
+                    
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa bi bi-file-earmark-bar-graph-fill fa-2x"></i>
+                        <span class="nav-text">
+                            Graphs and Statistics
+                        </span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa bi bi-boxes fa-2x"></i>
+                        <span class="nav-text">
+                            Quotes
+                        </span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa bi bi-clipboard fa-2x"></i>
+                        <span class="nav-text">
+                            Tables
+                        </span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa bi bi-map fa-2x"></i>
+                        <span class="nav-text">
+                            Maps
+                        </span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa bi bi-info-lg fa-2x"></i>
+                        <span class="nav-text">
+                            Documentation
+                        </span>
+                    </a>
+                </li>
+            </ul>
+
+            <ul class="logout">
+                <li>
+                    <a href="#">
+                        <i class="fa bi bi-power fa-2x"></i>
+                        <span class="nav-text">
+                            Logout
+                        </span>
+                    </a>
+                </li>
+            </ul>
+            <ul class="login">
+                <li>
+                    <a href="#">
+                        <i class="fa bi bi-box-arrow-in-right fa-2x"></i>
+                        <span class="nav-text">
+                            Login
+                        </span>
+                    </a>
+                </li>  
+            </ul>
+        </nav>
             <!-- <textarea id="messages" name="messages" rows="10" cols="50">Messages</textarea><br/>
             <input type="button" value="Get v1" onclick="onGet('v1')"/><br/>
              -->
