--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -1,10 +1,10 @@
-body {
+/* body {
   align-items: center;
   background-color: #000;
   display: flex;
   justify-content: center;
   height: 100vh;
-}
+} */
 .BackgroundImage{
   width: 50%;
   height: 90%;
@@ -156,3 +156,10 @@ input[type=number] {
 .submit:active {
   background-color: #06b;
 }
+
+
+
+
+
+
+
