--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
 
 
         <script src="scripts/script.js"></script>
+        <script src="scripts/authScript.js"></script>
+
         <!-- <script src="scripts/nav.js"></script> -->
 
         <!-- <script id="replace_with_navbar" src="scripts/nav.js"></script> -->
@@ -169,7 +171,7 @@
                             <button type="button" class="submit" id="btn" onclick="validate()">Register</button>
             
                             <div class="input-container ic3" id="outputMessage">
-                                <h6 class="placeholderoutput"></h4>
+                                <h6 class="placeholderoutput"></h6>
                             </div>
                         </form>
           
@@ -185,21 +187,21 @@
                             <div class="subtitle">Let's create your account!</div>
                            
                             <div class="input-container ic2">
-                                <input type="text" id="inputEmail" class="input" maxlength="28" placeholder=" " />
+                                <input type="text" id="inputEmaill" class="input" maxlength="28" placeholder=" " />
                                 <div class="cut cut-short"></div>
                                 <label for="email" class="placeholder">Email</>
                             </div>
                            
                             <div class="input-container ic2">
-                                <input type="password" id="inputPassword" class="input" maxlength="12" placeholder=" " />
+                                <input type="password" id="inputPasswordd" class="input" maxlength="12" placeholder=" " />
                                 <div class="cut" style="width: 80px;"></div>
                                 <label for="password" class="placeholder">Password</>
                             </div>
                            
-                            <button type="button" class="submit" id="btn" onclick="validate()">Register</button>
+                            <button type="button" class="submit" id="btn" onclick="postData()">Signin</button>
             
                             <div class="input-container ic3" id="outputMessage">
-                                <h6 class="placeholderoutput"></h4>
+                                <h5 class="placeholderoutput"></h5>
                             </div>
                         </form>
                         <div class="hr"></div>
