--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 
         <script src="scripts/script.js"></script>
         <script src="scripts/authScript.js"></script>
+        <script src="scripts/checkForToken.js"></script>
 
         <!-- <script src="scripts/nav.js"></script> -->
 
@@ -25,7 +26,7 @@
     </head>
     <!-- <div id="includedContent" style="height: 100%; height: 50%;"></div> -->
 
-    <body>
+    <body onload="checkForToken();">
         <nav id="includedContent" class="main-menu">
             <ul>
                 <li>
@@ -105,9 +106,10 @@
                     </a>
                 </li>
             </ul>
-
-            <ul class="logout">
-                <li>
+            
+            <ul class="logout" id="authreq">
+    
+                <!-- <li>
                     <a href="#">
                         <i class="fa bi bi-power fa-2x"></i>
                         <span class="nav-text">
@@ -115,9 +117,9 @@
                         </span>
                     </a>
                 </li>
-            </ul>
-            <ul class="login">
-                <li>
+            </ul> -->
+            <ul class="login" id="authreq">
+                <!-- <li>
                     <a href="#">
                         <i class="fa bi bi-box-arrow-in-right fa-2x"></i>
                         <span class="nav-text">
@@ -125,7 +127,7 @@
                         </span>
                     </a>
                 </li>  
-            </ul>
+            </ul> -->
         </nav>
         
         <div class="BackgroundImage" id="BackgroundImage"></div>
