--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
         <script src="scripts/script.js"></script>
         <script src="scripts/authScript.js"></script>
         <script src="scripts/checkForToken.js"></script>
+        <script src="scripts/logout.js"></script>
 
         <!-- <script src="scripts/nav.js"></script> -->
 
