funkcije iz dve razlicite skripte su se mesale zbog istog imena sada je greska ispravljena

--- a/templates/index.html
+++ b/templates/index.html
@@ -201,7 +201,7 @@
                                 <label for="password" class="placeholder">Password</>
                             </div>
                            
-                            <button type="button" class="submit" id="btn" onclick="postData()">Signin</button>
+                            <button type="button" class="submit" id="btn" onclick="postAuthData()">Signin</button>
             
                             <div class="input-container ic3" id="outputMessage">
                                 <h5 class="placeholderoutput"></h5>
