--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,8 @@
         <script src="scripts/authScript.js"></script>
         <script src="scripts/checkForToken.js"></script>
         <script src="scripts/logout.js"></script>
+        <!-- <script src="scripts/registerFormValidation.js"></script> -->
+
 
         <!-- <script src="scripts/nav.js"></script> -->
 
@@ -22,7 +24,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <title>My Registration V-0.2</title>
-       
+
        
     </head>
     <!-- <div id="includedContent" style="height: 100%; height: 50%;"></div> -->
@@ -171,7 +173,7 @@
                                 <div class="cut" style="width: 130px;"></div>
                                 <label for="password" class="placeholder">Repeat Password</>
                             </div>
-                            <button type="button" class="submit" id="btn" onclick="validate()">Register</button>
+                            <button type="button" class="submit" id="btn" onclick="validate();">Register</button>
             
                             <div class="input-container ic3" id="outputMessage">
                                 <h6 class="placeholderoutput"></h6>
