pozivanje nove  skripte

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,9 @@
         <script src="scripts/checkForToken.js"></script>
         <script src="scripts/logout.js"></script>
         <script src="scripts/restartPasswordPopup.js"></script>
+        <script src="scripts/restartPasswordScript.js"></script>
+        <script src="scripts/chechCodeForPassword.js"></script>
+
 
 
         <!-- <script src="scripts/registerFormValidation.js"></script> -->
@@ -228,15 +231,8 @@
                         <div id="pop123">
                             
                         </div>
-                        
-                        
-                        
-       
+
                     </div>
-                             
-                      
-                
-                    
                 </div> 
             </div>
         </div>
