pozivanje nove skripte js

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,8 @@
         <script src="scripts/restartPasswordPopup.js"></script>
         <script src="scripts/restartPasswordScript.js"></script>
         <script src="scripts/chechCodeForPassword.js"></script>
+        <script src="scripts/setNewUserPassword.js"></script>
+
 
 
 
@@ -220,7 +222,9 @@
                    
                             <div class="hrhr" id="hrhr"></div>
                             <div class="foot-lnk">
-                                <label id="open-subscribe-form" onclick="putElem()"><a>Forgot your password?</a></a>
+                                <label id="open-subscribe-form" onclick="putElem()">
+                                    <a >Forgot your password?</a>
+                                </label>
                             </div>
                             
                             <!-- <button id="open-subscribe-form" onclick="putElem()">
