dodat user profile u nav meniju

--- a/templates/index.html
+++ b/templates/index.html
@@ -117,8 +117,17 @@
                         </span>
                     </a>
                 </li>
+                <li id="userProfile">
+                 
+                </li>
+ 
+          
             </ul>
             
+            
+            <!-- <ul class="profile" id="userProfile">
+
+            </ul> -->
             <ul class="logout" id="authreq">
     
                 <!-- <li>
