--- a/templates/css/navStyle.css
+++ b/templates/css/navStyle.css
@@ -59,7 +59,7 @@ width:250px;
 }
 .userProfileText{
   padding-left: 13px;
-  
+  height: 10px;
 }
 
 .main-menu li>a {
@@ -91,7 +91,7 @@ font-size:18px;
 position:relative;
 display:table-cell;
 vertical-align:middle;
-width:190px;
+width:205px;
   font-family: 'Titillium Web', sans-serif;
 }
 
