--- a/templates/index.html
+++ b/templates/index.html
@@ -3,21 +3,19 @@
     <head>
         <meta charset="UTF-8" />
         
-        <link rel="stylesheet" href="css/styles.css">
-        <link rel="stylesheet" href="css/navStyle.css">
-        <link rel="stylesheet" href="css/formsHolder.css">
-        <link rel="stylesheet" href="css/restartPassword.css">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="navStyle.css">
+        <link rel="stylesheet" href="formsHolder.css">
+        <link rel="stylesheet" href="restartPassword.css">
 
 
 
-        <script src="scripts/script.js"></script>
-        <script src="scripts/authScript.js"></script>
-        <script src="scripts/checkForToken.js"></script>
-        <script src="scripts/logout.js"></script>
-        <script src="scripts/restartPasswordPopup.js"></script>
-        <script src="scripts/restartPasswordScript.js"></script>
-        <script src="scripts/chechCodeForPassword.js"></script>
-        <script src="scripts/setNewUserPassword.js"></script>
+        <script src="script.js"></script>
+        <script src="authScript.js"></script>
+        <script src="checkForToken.js"></script>
+        <script src="logout.js"></script>
+        <script src="restartPasswordPopup.js"></script>
+        <script src="restartPasswordScript.js"></script>
 
 
 
@@ -183,7 +181,7 @@
                                 <div class="cut" style="width: 130px;"></div>
                                 <label for="password" class="placeholder">Repeat Password</>
                             </div>
-                            <button type="button" class="submit" id="btn" onclick="validate();">Register</button>
+                            <button type="button" class="submit" id="btn_validate" onclick="validate();">Register</button>
             
                             <div class="input-container ic3" id="outputMessage">
                                 <h6 class="placeholderoutput"></h6>
