--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -3,12 +3,12 @@
     <head>
         <title>User Profile
         </title>
-        <script src="scripts/userProfile.js"></script>
-        <script src="scripts/checkForToken.js"></script>
+        <script src="userProfile.js"></script>
+        <script src="checkForToken.js"></script>
         
 
-        <link rel="stylesheet" href="css/userProfile.css">
-        <link rel="stylesheet" href="css/navStyle.css">
+        <link rel="stylesheet" href="userProfile.css">
+        <link rel="stylesheet" href="navStyle.css">
 
 
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
