--- a/templates/css/formsHolder.css
+++ b/templates/css/formsHolder.css
@@ -3,21 +3,42 @@
 .clearfix:after{clear:both;display:block}
 a{color:inherit;text-decoration:none}
 
+@media screen and (max-width: 1450px) {
+
+    .login-wrap .login-html{
+        height: 70%;
+        width: 50%;
+        text-align: center;    
+    }
+
+
+}
+@media screen and (max-width: 600px) {
+
+    .login-wrap .login-html{
+        height: 80%;
+        width: 50%;
+        text-align: center;    
+    }
+
+
+}
 .login-wrap{
-	width:100%;
+	width:90%;
 	margin:auto;
-	max-width:525px;
-	min-height:670px;
+	max-width:52%;
+	min-height:67%;
 	position:relative;
-	/* background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center; */
+    
+    /* background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center; */
 	/* box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19); */
 }
 .login-html{
-	background-color: #15172b;
+    background-color: #15172b;
   position: fixed;
   border-radius: 20px;
   box-sizing: border-box;
-  height: 840px;
+  height: 95%;
   padding: 20px;
   width: 400px;
 
