dodat je novi blok za social media

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="navStyle.css">
         <link rel="stylesheet" href="formsHolder.css">
         <link rel="stylesheet" href="restartPassword.css">
+        <link rel="stylesheet" href="socialMedia.css">
 
 
 
@@ -31,7 +32,10 @@
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <!-- <script src="scripts/registerFormValidation.js"></script> -->
+     
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <!-- <script src="scripts/registerFormValidation.js"></script> -->
         <!-- <script src="scripts/registerFormValidation.js"></script> -->
         <!-- <script src="scripts/nav.js"></script> -->
         <!-- <script id="replace_with_navbar" src="scripts/nav.js"></script> -->
@@ -244,6 +248,12 @@
                   <div id="pop123">
                       
                   </div>
+                    <div id="social-platforms">
+                    
+                        <a class="btn btn-icon btn-facebook" href="#"><i class="fa fa-facebook"></i><span>Facebook</span></a>
+                        <a class="btn btn-icon btn-googleplus" href="#"><i class="fa fa-google-plus"></i><span>Google+</span></a>
+                        <a class="btn btn-icon btn-linkedin" href="#"><i class="fa fa-linkedin"></i><span>LinkedIn</span></a>
+                    </div>
 
               </div>
           </div> 
