--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="navStyle.css">
-        <link rel="stylesheet" href="test.css">
+        <link rel="stylesheet" href="formsHolder.css">
         <link rel="stylesheet" href="restartPassword.css">
 
 
