izmena u dizajnu i fix conflict

--- a/templates/css/restartPassword.css
+++ b/templates/css/restartPassword.css
@@ -1,112 +1,112 @@
 #open-subscribe-form{
 
-    color: rgb(252, 252, 252);
-    font-size: 15px;
- 
-  }
-  .hrhr{
-    height: 2px;
-    width: 335px;
-    margin: 15px 0 15px 0;
-    background: rgba(255,255,255,.2);
-  }
-  .subscribe-form {
-    position:fixed; 
-    top: -140%;
-    left: 50%;
-    transform: translate(-50%,-50%) scale(1.15);
-    width:calc(100% - 20px);
-    max-width:950px;
-    background:#fff;
-    border-radius:10px;
-    display:grid;
-    gap:10px;
-    padding:50px 40px 40px;
-    box-shadow:0px 2px 2px 2px rgba(0,0,0,0.05);
-    z-index:2;
-    opacity:0; 
-    transition:top 0ms ease-in-out 300ms,
-               transform 300ms ease-in-out 0ms,
-               opacity 300ms ease-in-out 0ms;
-  }
+  color: rgb(252, 252, 252);
+  font-size: 15px;
 
-  .subscribe-form.active {
-    height: 600px;
-    width: 600px;
-    top:100%;
-    transform:translate(-50%,-50%) scale(1);
-    opacity:1;
-    transition:top 0ms ease-in-out 0ms,
-               transform 300ms ease-in-out 0ms,
-               opacity 300ms ease-in-out 0ms;
+}
+.hrhr{
+  height: 2px;
+  width: 335px;
+  margin: 15px 0 15px 0;
+  background: rgba(255,255,255,.2);
+}
+.subscribe-form {
+  position:fixed; 
+  top: -140%;
+  left: 50%;
+  transform: translate(-50%,-50%) scale(1.15);
+  width:calc(100% - 20px);
+  max-width:950px;
+  background:#fff;
+  border-radius:10px;
+  display:grid;
+  gap:10px;
+  padding:50px 40px 40px;
+  box-shadow:0px 2px 2px 2px rgba(0,0,0,0.05);
+  z-index:2;
+  opacity:0; 
+  transition:top 0ms ease-in-out 300ms,
+             transform 300ms ease-in-out 0ms,
+             opacity 300ms ease-in-out 0ms;
+}
+
+.subscribe-form.active {
+  height: 600px;
+  width: 600px;
+  top:100%;
+  transform:translate(-50%,-50%) scale(1);
+  opacity:1;
+  transition:top 0ms ease-in-out 0ms,
+             transform 300ms ease-in-out 0ms,
+             opacity 300ms ease-in-out 0ms;
+}
+.subscribe-form .close-btn {
+  position:absolute;
+  top:10px;
+  right:10px;
+  font-size:25px;
+  color:rgb(255, 255, 255);
+  background-color: rgb(255, 5, 5);
+  border:none;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  cursor:pointer;
+}
+.subscribe-form .left {
+  display:flex;
+  align-items:center;
+}
+.subscribe-form .right h2 {
+  font-size:28px;
+  font-family:"Montserrat",sans-serif;
+  line-height:1.15;
+  margin-bottom:10px;
+  color:#111;
+  padding-bottom: 20px;
+}
+.subscribe-form .right p {
+  font-size:16px;
+  color:#555;
+  margin-bottom:15px;
+}
+.subscribe-form .right .formm label {
+  display:block;
+  margin-bottom:5px;
+  font-size:15px;
+}
+.subscribe-form .right .formm .inputt {
+  margin-bottom:10px;
+}
+.subscribe-form .right .formm input {
+  width:100%;
+  padding:12px;
+  border:2px solid rgb(174, 207, 249);
+  font-size:17px;
+  border-radius:5px;
+}
+.subscribe-form .right .formm button {
+  width:100%;
+  padding:10px;
+  font-size:18px;
+  border-radius:5px;
+  border:none;
+  outline:none;
+  cursor:pointer;
+  background:#08d;
+  color:#fff;
+  box-shadow:0px 2px 2px #ddd;
+}
+
+@media(min-width: 680px){
+  .subscribe-form {
+    grid-template-columns:repeat(2, 1fr);
   }
-  .subscribe-form .close-btn {
-    position:absolute;
-    top:10px;
-    right:10px;
-    font-size:25px;
-    color:rgb(255, 255, 255);
-    background-color: rgb(255, 5, 5);
-    border:none;
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    cursor:pointer;
-  }
-  .subscribe-form .left {
-    display:flex;
-    align-items:center;
-  }
-  .subscribe-form .right h2 {
-    font-size:28px;
-    font-family:"Montserrat",sans-serif;
-    line-height:1.15;
-    margin-bottom:10px;
-    color:#111;
-    padding-bottom: 20px;
-  }
-  .subscribe-form .right p {
-    font-size:16px;
-    color:#555;
-    margin-bottom:15px;
-  }
-  .subscribe-form .right .formm label {
-    display:block;
-    margin-bottom:5px;
-    font-size:15px;
-  }
-  .subscribe-form .right .formm .inputt {
-    margin-bottom:10px;
-  }
-  .subscribe-form .right .formm input {
-    width:100%;
-    padding:12px;
-    border:2px solid rgb(174, 207, 249);
-    font-size:17px;
-    border-radius:5px;
-  }
-  .subscribe-form .right .formm button {
-    width:100%;
-    padding:10px;
-    font-size:18px;
-    border-radius:5px;
-    border:none;
-    outline:none;
-    cursor:pointer;
-    background:#08d;
-    color:#fff;
-    box-shadow:0px 2px 2px #ddd;
-  }
-  
-  @media(min-width: 680px){
-    .subscribe-form {
-      grid-template-columns:repeat(2, 1fr);
-    }
-  }
-  
-  .center {
-    position:fixed;
-    top:130%;
-    left:50%;
-    transform:translate(-50%,-50%);
-  }
+}
+
+.center {
+  position:fixed;
+  /* top:130%; */
+  left:50%;
+  transform:translate(-50%,-50%);
+}
