--- a/templates/css/restartPassword.css
+++ b/templates/css/restartPassword.css
@@ -103,3 +103,10 @@
     grid-template-columns:repeat(2, 1fr);
   }
 }
+
+.center {
+  position:fixed;
+  /* top:130%; */
+  left:50%;
+  transform:translate(-50%,-50%);
+}
