--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -13,6 +13,10 @@
 
         
 
+        <script src="checkForToken.js"></script>
+        <script src="userProfile.js"></script>
+        <script src="userProfileEditField.js"></script>
+
 
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
