izbacent kontekt li elementa  sada ga dodaje js ako postoji token u session storage

--- a/templates/index.html
+++ b/templates/index.html
@@ -131,12 +131,12 @@
                     </a>
                 </li>
                 <li id="userProfile">
-                    <a href="userProfile.html">
+                    <!-- <a href="userProfile.html">
                         <i class="fa bi bi-person-circle fa-2x"></i>
                         <span class="nav-text">
                             User profile
                         </span>
-                    </a>
+                    </a> -->
                 </li>
 
 
