--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -6,16 +6,19 @@
 
         
 
-        <link rel="stylesheet" href="userProfile.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="navStyle.css">
-
-
+        <link rel="stylesheet" href="formsHolder.css">
+        <link rel="stylesheet" href="restartPassword.css">
+        <link rel="stylesheet" href="socialMedia.css">
+        <link rel="stylesheet" href="userProfile.css">
 
         
 
         <script src="checkForToken.js"></script>
         <script src="userProfile.js"></script>
         <script src="userProfileEditField.js"></script>
+        <script src="logout.js"></script>
 
 
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -24,10 +27,23 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <link rel="stylesheet"href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+   
+         <!-- Latest compiled and minified CSS -->
+         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+   
+         <!-- Optional theme -->
+         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+   
+       <!-- Latest compiled and minified JavaScript -->
+         <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>	
+   
+       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-        <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     </head>
     <body onload="checkForToken();">
         <nav id="includedContent" class="main-menu">
@@ -39,7 +55,7 @@
                             Dashboard
                         </span>
                     </a>
-                    
+
                 </li>
                 <li class="has-subnav">
                     <a href="#">
@@ -48,7 +64,7 @@
                             Stars Components
                         </span>
                     </a>
-                    
+
                 </li>
                 <li class="has-subnav">
                     <a href="#">
@@ -57,7 +73,7 @@
                             Forms
                         </span>
                     </a>
-                    
+
                 </li>
                 <li class="has-subnav">
                     <a href="#">
@@ -66,7 +82,7 @@
                             Pages
                         </span>
                     </a>
-                    
+
                 </li>
                 <li>
                     <a href="#">
@@ -109,15 +125,22 @@
                     </a>
                 </li>
                 <li id="userProfile">
-                 
+                    <!-- <a href="userProfile.html">
+                        <i class="fa bi bi-person-circle fa-2x"></i>
+                        <span class="nav-text">
+                            User profile
+                        </span>
+                    </a> -->
                 </li>
-            
+
+
             </ul>
-          
- 
-            
+
+
+            <!-- <ul class="profile" id="userProfile">
+            </ul> -->
             <ul class="logout" id="authreq">
-    
+
                 <!-- <li>
                     <a href="#">
                         <i class="fa bi bi-power fa-2x"></i>
