resen favicon error

--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -3,7 +3,7 @@
     <head>
         <title>User Profile
         </title>
-
+        <link rel="shortcut icon" href="#">
         
 
         <link rel="stylesheet" href="styles.css">
@@ -19,7 +19,8 @@
         <script src="userProfile.js"></script>
         <script src="userProfileEditField.js"></script>
         <script src="logout.js"></script>
-
+        <script src="fetchData.js"></script>
+            
 
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,7 +46,7 @@
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     </head>
-    <body onload="checkForToken();">
+    <body onload="checkForToken(); fetchData();">
         <nav id="includedContent" class="main-menu">
             <ul>
                 <li>
@@ -161,6 +162,8 @@
                 </li>   -->
             </ul> 
         </nav>
+
+
         <div class="container emp-profile">
             <!-- <form method="post"> -->
                 <div class="row">
