dodat id za sliku

--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -170,7 +170,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="profile-img">
-                            <img src="photo.png" alt=""/>
+                            <img src="photo.png" id="userProfileIMG" alt="Users profile image"/>
                             <div class="file btn btn-lg btn-primary">
                                 Change Photo
                                 <input id="fileupload" type="file" name="fileupload" oninput="uploadFile();" />
