dodato polje deskripcije

--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -266,7 +266,16 @@
                                                 <input type="text" value="" id="userPhoneInput" class="form-control hide">
                                             </div>
                                         </div>
-
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Profile description</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p id="userDescription">My description bla bla blah</p>
+                                                <textarea id="userDescriptionInput" class="form-control hide"> My description bla bla blah</textarea>
+                                                <!-- <input type="" value="" id="userDescriptionInput" class="form-control hide"> -->
+                                            </div>
+                                        </div>
                                         
                                     </form>
                             </div>
