--- a/templates/index.html
+++ b/templates/index.html
@@ -44,8 +44,8 @@
         <!-- <script src="scripts/registerFormValidation.js"></script> -->
         <!-- <script src="scripts/nav.js"></script> -->
         <!-- <script id="replace_with_navbar" src="scripts/nav.js"></script> -->
-
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+        <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
