dodata nova klasa

--- a/templates/setupUserProfile.html
+++ b/templates/setupUserProfile.html
@@ -104,7 +104,7 @@
                                         </div>
                                         <div class="sep">
                                             <label for="tagInput">Tags:</label>
-                                            <ul id="tagList"></ul>
+                                            <ul id="tagList" class="tagList"></ul>
                                             <div style="clear:both"></div>
                                             <input type="hidden" id="tags"/>
                                             <input type="text" id="tagInput" class="tagInput form-control" oninput="hashTag();" placeholder="Enter tag name then pres space"/>
