--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -197,7 +197,12 @@
                                         </div>
                                     </h5>
                                     <h6>
-                                        Web Developer and Designer
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <p id="userTitle">Web Developer and Designer</p>
+                                                <input type="text" value="" id="userTitleInput" class="form-control fl-name hide" style="width: 200px;">
+                                            </div>
+                                        </div>
                                     </h6>
                                     <p class="proile-rating">RANKINGS : <span>8/10</span></p>
                             <ul class="nav nav-tabs" id="myTab" role="tablist">
